feat: atualizar marca e status de produtos
